// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Module Module component 1`] = `
<div
  className="component obojobo-draft--modules--module"
  data-focussed={false}
  data-id="7a2ee0ca-e40c-4fdd-aceb-74182701ef2f"
  data-obo-component={true}
  data-type="ObojoboDraft.Modules.Module"
  id="obo-7a2ee0ca-e40c-4fdd-aceb-74182701ef2f"
  role="main"
  tabIndex={-1}
>
  <div />
</div>
`;

exports[`Module Module component with child 1`] = `
<div
  className="component obojobo-draft--modules--module"
  data-focussed={false}
  data-id="7a2ee0ca-e40c-4fdd-aceb-74182701ef2f"
  data-obo-component={true}
  data-type="ObojoboDraft.Modules.Module"
  id="obo-7a2ee0ca-e40c-4fdd-aceb-74182701ef2f"
  role="main"
  tabIndex={-1}
>
  <div>
    <MockComponent
      model={
        Object {
          "getComponentClass": [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": "MockComponent",
              },
            ],
          },
        }
      }
      moduleData={
        Object {
          "focusState": Object {},
          "navState": Object {},
        }
      }
    />
  </div>
</div>
`;
